grammar.js
    source: ($) => repeat($.source_line),
    source_line: ($) =>
      seq(
        choice(
          field("symbol", $._symbol),
          field("label", $._label),
          field("inst", $._inst),
          seq(field("label", $._label), field("inst", $._inst)),
        ),
        token(prec(1, /\r?\n/)),
      ),

    // Symbols
    _symbol: ($) => choice($.symbol_eq, $.symbol_assign, $.symbol_set),
    _label: ($) => choice($.label, $.local_label, $.unnamed_label),
    _inst: ($) => choice($.macro_inst, $.actual_inst, $._pseudo_inst),

    // Macro instruction
    pseudo_inst_code: ($) => $.dot_keyword_code,

    // .condes
    pseudo_inst_else: ($) => $.dot_keyword_else,

    // .elseif
    pseudo_inst_ifblank: ($) =>
      seq(
        $.dot_keyword_ifblank,
        field("tokens", optional($.pseudo_inst_ifblank_tokens)),
      ),
    pseudo_inst_ifblank_tokens: (_) => token(prec(-1, /.*/)),

    // .ifconst
    pseudo_inst_ifconst: ($) =>
      seq($.dot_keyword_ifconst, field("expr", $._expression)),

    // .ifdef
    pseudo_inst_ifdef: ($) =>
      seq($.dot_keyword_ifdef, field("symbol", $.symbol)),

    // .ifnblank
    pseudo_inst_ifnblank: ($) =>
      seq(
        $.dot_keyword_ifnblank,
        field("tokens", optional($.pseudo_inst_ifnblank_tokens)),
      ),
    pseudo_inst_ifnblank_tokens: (_) => token(prec(-1, /.*/)),

    // .ifndef
    pseudo_inst_ifndef: ($) =>
      seq($.dot_keyword_ifndef, field("symbol", $.symbol)),

    // .ifnref
    pseudo_inst_ifnref: ($) =>
      seq($.dot_keyword_ifnref, field("symbol", $.symbol)),

    // .ifp02
    pseudo_inst_ifp02: ($) => $.dot_keyword_ifp02,

    // .ifp02x
    pseudo_inst_ifp02x: ($) => $.dot_keyword_ifp02x,

    // .ifp45gs02
    pseudo_inst_ifp45gs02: ($) => $.dot_keyword_ifp45gs02,

    // .ifp816
    pseudo_inst_ifp816: ($) => $.dot_keyword_ifp816,

    // .ifp4510
    pseudo_inst_ifp4510: ($) => $.dot_keyword_ifp4510,

    // .ifp6280
    pseudo_inst_ifp6280: ($) => $.dot_keyword_ifp6280,

    // .ifpc02
    pseudo_inst_ifpc02: ($) => $.dot_keyword_ifpc02,

    // .ifpce02
    pseudo_inst_ifpce02: ($) => $.dot_keyword_ifpce02,

    // .ifpdtv
    _expression: ($) =>
      choice($.unary_expression, $.binary_expression, $._primary_expression),

    // Unary expression
    dot_keyword_code: (_) => make_keyword(".code"),
    dot_keyword_else: (_) => make_keyword(".else"),
    dot_keyword_endif: (_) => make_keyword(".endif"),
    dot_keyword_ifblank: (_) => make_keyword(".ifblank"),
    dot_keyword_ifconst: (_) => make_keyword(".ifconst"),
    dot_keyword_ifdef: (_) => make_keyword(".ifdef"),
    dot_keyword_ifnblank: (_) => make_keyword(".ifnblank"),
    dot_keyword_ifndef: (_) => make_keyword(".ifndef"),
    dot_keyword_ifnref: (_) => make_keyword(".ifnref"),
    dot_keyword_ifp02: (_) => make_keyword(".ifp02"),
    dot_keyword_ifp02x: (_) => make_keyword(".ifp02x"),
    dot_keyword_ifp45gs02: (_) => make_keyword(".ifp45gs02"),
    dot_keyword_ifp816: (_) => make_keyword(".ifp816"),
    dot_keyword_ifp4510: (_) => make_keyword(".ifp4510"),
    dot_keyword_ifp6280: (_) => make_keyword(".ifp6280"),
    dot_keyword_ifpc02: (_) => make_keyword(".ifpc02"),
    dot_keyword_ifpce02: (_) => make_keyword(".ifpce02"),
    symbol: ($) => $._identifier,
    number: ($) => choice($._number_bin, $._number_dec, $._number_hex),
    _number_hex: (_) => seq("$", /[a-fA-F0-9]+/),
    _number_dec: (_) => /[0-9]+/,
    _number_bin: (_) => seq("%", /[0-1]+/),
    _identifier: (_) => /[a-zA-Z_][0-9a-zA-Z_]*/,

    // Comment
