test/corpus/inst/pseudo/ifndef.txt
==================================================
IFNDEF pseudo instruction
==================================================

.ifndef sym
    .code
.else
    .code
.endif

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_ifndef
      (dot_keyword_ifndef)
      symbol: (symbol)
      block: (pseudo_inst_block
          line: (source_line
              inst: (pseudo_inst_code
                  (dot_keyword_code))))
      alt: (pseudo_inst_else
          (dot_keyword_else)
          block: (pseudo_inst_block
              line: (source_line
                  inst: (pseudo_inst_code
                      (dot_keyword_code)))))
      (dot_keyword_endif))))
