test/corpus/inst/pseudo/ifnref.txt
==================================================
IFNREF pseudo instruction
==================================================

.ifnref sym

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_ifnref
      (dot_keyword_ifnref)
      symbol: (symbol))))
