test/corpus/inst/pseudo/ifp02.txt
==================================================
IFP02 pseudo instruction
==================================================

.ifp02
    .code
.else
    .code
.endif

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_ifp02
      (dot_keyword_ifp02)
      block: (pseudo_inst_block
          line: (source_line
              inst: (pseudo_inst_code
                  (dot_keyword_code))))
      alt: (pseudo_inst_else
          (dot_keyword_else)
          block: (pseudo_inst_block
              line: (source_line
                  inst: (pseudo_inst_code
                      (dot_keyword_code)))))
      (dot_keyword_endif))))
