test/corpus/inst/pseudo/ifp4510.txt
==================================================
IFP4510 pseudo instruction
==================================================

.ifp4510
    .code
.else
    .code
.endif

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_ifp4510
      (dot_keyword_ifp4510)
      block: (pseudo_inst_block
          line: (source_line
              inst: (pseudo_inst_code
                  (dot_keyword_code))))
      alt: (pseudo_inst_else
          (dot_keyword_else)
          block: (pseudo_inst_block
              line: (source_line
                  inst: (pseudo_inst_code
                      (dot_keyword_code)))))
      (dot_keyword_endif))))
