test/corpus/inst/pseudo/ifp45gs02.txt
==================================================
IFP45GS02 pseudo instruction
==================================================

.ifp45gs02

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_ifp45gs02
      (dot_keyword_ifp45gs02))))
