test/corpus/inst/pseudo/ifpc02.txt
==================================================
IFPC02 pseudo instruction
==================================================

.ifpc02

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_ifpc02
      (dot_keyword_ifpc02))))
